--- a/code/merge-labeled.ipynb
+++ b/code/merge-labeled.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# importing libraries\n",
+    "# Import libraries\n",
+    "\n",
     "import pandas as pd\n",
     "import glob\n",
     "import os"
@@ -18,30 +19,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# merging the files\n",
+    "\"\"\"Script to concatenate all files in calibration_scription folder\"\"\"\n",
+    "\n",
+    "# Merge files\n",
+    "\n",
     "joined_files = os.path.join('../data/labeled/calibration', '*.csv')\n",
     "\n",
-    "# a list of all joined files is returned\n",
-    "joined_list = glob.glob(joined_files)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# finally, the files are joined\n",
-    "df = pd.concat(map(pd.read_csv, joined_list), ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# and saved to csv\n",
+    "# List of merged files\n",
+    "\n",
+    "joined_list = glob.glob(joined_files)\n",
+    "\n",
+    "# Concatenate files\n",
+    "\n",
+    "df = pd.concat(map(pd.read_csv, joined_list), ignore_index=True)\n",
+    "\n",
+    "# Save to csv\n",
+    "\n",
     "df.to_csv('../data/labeled/calibration_merged.csv')"
    ]
   },
@@ -51,30 +44,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# merging the files\n",
+    "\"\"\"Script to concatenate all files in movement_scription folder\"\"\"\n",
+    "\n",
+    "# Merge files\n",
+    "\n",
     "joined_files = os.path.join('../data/labeled/movement', '*.csv')\n",
     "\n",
-    "# a list of all joined files is returned\n",
-    "joined_list = glob.glob(joined_files)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# finally, the files are joined\n",
-    "df = pd.concat(map(pd.read_csv, joined_list), ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# and saved to csv\n",
+    "# List of merged files\n",
+    "\n",
+    "joined_list = glob.glob(joined_files)\n",
+    "\n",
+    "# Concatenate files\n",
+    "\n",
+    "df = pd.concat(map(pd.read_csv, joined_list), ignore_index=True)\n",
+    "\n",
+    "# Save to csv\n",
+    "\n",
     "df.to_csv('../data/labeled/movement_merged.csv')"
    ]
   }
@@ -95,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
