--- a/code/unlabeled.ipynb
+++ b/code/unlabeled.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Load Data\n",
+    "### Load Data (from unlabeled dataset)\n",
     "\n",
     "df = pd.read_csv('../data/unlabeled/059-COMBINED-2022-11-9-7-4-48-1667995631-v1.4.3+lucina-buzz.csv', index_col=0)"
    ]
@@ -281,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
